# handlers/vote/TpsController/TpsController.go
@@ -1,10 +1,13 @@
 package TpsController
 
 import (
+	"go_rest_api/models/core"
 	"go_rest_api/repositories/vote/Tps"
-	"log"
+	"time"
 
+	"github.com/go-playground/validator/v10"
 	"github.com/gofiber/fiber/v2"
+	"github.com/google/uuid"
 )
 
 // @Summary		Tps
@@ -15,9 +18,22 @@ import (
 //
 // @Security		ApiKeyAuth
 //
-// @Router			/api/v1/company [get]
+// @Router			/api/v1/tps [get]
 func GetAll(c *fiber.Ctx) error {
-	var err error
+	data, totalRows, totalPages, err := Tps.GetAll(c)
+
+	if err != nil {
+		err := c.Status(fiber.StatusBadRequest).JSON(fiber.Map{"code": fiber.StatusBadRequest, "message": err.Error()})
+		if err != nil {
+			return err
+		}
+		return err
+	}
+
+	err = c.Status(fiber.StatusOK).JSON(fiber.Map{"code": fiber.StatusOK, "message": "Data Stored.", "data": data, "totalRow": totalRows, "totalPages": totalPages})
+	if err != nil {
+		return err
+	}
 	return err
 }
 
@@ -32,7 +48,20 @@ func GetAll(c *fiber.Ctx) error {
 //
 // @Router			/api/v1/tps/{id} [get]
 func GetById(c *fiber.Ctx) error {
-	var err error
+	var Id = c.Params("id")
+
+	data, err := Tps.GetDataByID(Id)
+	if err != nil {
+		err := c.Status(fiber.StatusBadRequest).SendString(err.Error())
+		if err != nil {
+			return nil
+		}
+	}
+
+	err = c.Status(fiber.StatusOK).JSON(fiber.Map{"code": fiber.StatusOK, "message": "success", "data": data})
+	if err != nil {
+		return nil
+	}
 	return err
 }
 
@@ -46,10 +75,44 @@ func GetById(c *fiber.Ctx) error {
 // @Router			/api/v1/tps [post]
 func Create(c *fiber.Ctx) error {
 	var (
-		err     error
-		payload Tps.TpsRequest
+		err   error
+		input Tps.TpsRequest
 	)
-	log.Println(payload)
+
+	user := c.Locals("user").(core.UserResponse)
+	if err := c.BodyParser(&input); err != nil {
+		err := c.Status(fiber.StatusBadRequest).JSON(fiber.Map{"code": fiber.StatusBadRequest, "message": err.Error()})
+		if err != nil {
+			return nil
+		}
+	}
+
+	validate := validator.New()
+	errValidate := validate.Struct(input)
+	if errValidate != nil {
+		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
+			"message": "failed",
+			"error":   errValidate.Error(),
+		})
+	}
+
+	input.ID = uuid.New()
+	input.Status = true
+	input.CreatedAt = time.Now()
+	input.CreatedBy = user.ID
+
+	_, err = input.Create()
+	if err != nil {
+		err := c.Status(fiber.StatusBadRequest).SendString(err.Error())
+		if err != nil {
+			return nil
+		}
+	}
+
+	err = c.Status(fiber.StatusOK).JSON(fiber.Map{"code": fiber.StatusOK, "message": "success"})
+	if err != nil {
+		return nil
+	}
 	return err
 }
 
@@ -64,10 +127,42 @@ func Create(c *fiber.Ctx) error {
 // @Router			/api/v1/tps/{id} [post]
 func Update(c *fiber.Ctx) error {
 	var (
-		err     error
-		payload Tps.TpsUpdateRequest
+		err   error
+		input Tps.TpsUpdateRequest
 	)
-	log.Println(payload)
+	user := c.Locals("user").(core.UserResponse)
+	if err := c.BodyParser(&input); err != nil {
+		err := c.Status(fiber.StatusBadRequest).JSON(fiber.Map{"code": fiber.StatusBadRequest, "message": err.Error()})
+		if err != nil {
+			return nil
+		}
+	}
+
+	validate := validator.New()
+	errValidate := validate.Struct(input)
+	if errValidate != nil {
+		return c.Status(fiber.StatusBadRequest).JSON(fiber.Map{
+			"message": "failed",
+			"error":   errValidate.Error(),
+		})
+	}
+
+	var Id = c.Params("id")
+	input.UpdatedAt = time.Now()
+	input.UpdatedBy = user.ID
+
+	_, err = input.Update(Id)
+	if err != nil {
+		err := c.Status(fiber.StatusBadRequest).SendString(err.Error())
+		if err != nil {
+			return nil
+		}
+	}
+
+	err = c.Status(fiber.StatusOK).JSON(fiber.Map{"code": fiber.StatusOK, "message": "success"})
+	if err != nil {
+		return nil
+	}
 	return err
 }
 
@@ -82,9 +177,52 @@ func Update(c *fiber.Ctx) error {
 // @Router			/api/v1/tps/delete/{id} [post]
 func Delete(c *fiber.Ctx) error {
 	var (
-		err     error
-		payload Tps.TpsRequest
+		err error
 	)
-	log.Println(payload)
+	var Id = c.Params("id")
+	err = Tps.Delete(Id)
+	if err != nil {
+		err := c.Status(fiber.StatusBadRequest).SendString(err.Error())
+		if err != nil {
+			return nil
+		}
+	}
+
+	err = c.Status(fiber.StatusOK).JSON(fiber.Map{"code": fiber.StatusOK, "message": "success"})
+	if err != nil {
+		return nil
+	}
+	return err
+}
+
+func GetAllDapil(c *fiber.Ctx) error {
+	data, err := Tps.GetAllDapil(c)
+	if err != nil {
+		err := c.Status(fiber.StatusBadRequest).SendString(err.Error())
+		if err != nil {
+			return nil
+		}
+	}
+
+	err = c.Status(fiber.StatusOK).JSON(fiber.Map{"code": fiber.StatusOK, "message": "success", "data": data})
+	if err != nil {
+		return nil
+	}
+	return err
+}
+
+func GetAllDapilArea(c *fiber.Ctx) error {
+	data, err := Tps.GetAllDapilArea(c)
+	if err != nil {
+		err := c.Status(fiber.StatusBadRequest).SendString(err.Error())
+		if err != nil {
+			return nil
+		}
+	}
+
+	err = c.Status(fiber.StatusOK).JSON(fiber.Map{"code": fiber.StatusOK, "message": "success", "data": data})
+	if err != nil {
+		return nil
+	}
 	return err
 }
