# models/vote/PemiluTps.go
@@ -9,17 +9,17 @@ import (
 
 type Tps struct {
 	gorm.Model
-	ID        uuid.UUID  `gorm:"type:uuid;primary_key"`
-	DapilId   uuid.UUID  `gorm:"type:uuid"`
-	VillageId uuid.UUID  `gorm:"type:uuid"`
-	Rw        string     `gorm:"type:varchar(100);not null" json:"rw"`
-	Code      string     `gorm:"type:varchar(100);" json:"code"`
-	Name      string     `gorm:"type:varchar(100);not null" json:"name"`
-	Status    *bool      `gorm:"not null;default:true"`
-	CreatedBy uuid.UUID  `gorm:"type:uuid" json:"created_by"`
-	UpdatedBy uuid.UUID  `gorm:"type:uuid" json:"updated_by"`
-	CreatedAt *time.Time `gorm:"not null;default:now()"`
-	UpdatedAt *time.Time `gorm:"not null;default:now()"`
+	ID          uuid.UUID `gorm:"type:uuid;primary_key" json:"id"`
+	DapilId     uuid.UUID `gorm:"type:uuid" json:"dapil_id"`
+	DapilAreaId int       `gorm:"type:int" json:"dapil_area_id"`
+	Rw          string    `gorm:"type:varchar(100);not null" json:"rw"`
+	Code        string    `gorm:"type:varchar(100);" json:"code"`
+	Name        string    `gorm:"type:varchar(100);not null" json:"name"`
+	Status      bool      `gorm:"not null;default:true" json:"status"`
+	CreatedBy   uuid.UUID `gorm:"type:uuid" json:"created_by"`
+	UpdatedBy   uuid.UUID `gorm:"type:uuid" json:"updated_by"`
+	CreatedAt   time.Time `gorm:"not null;default:now()" json:"created_at"`
+	UpdatedAt   time.Time `gorm:"not null;default:now()" json:"updated_at"`
 }
 
 func (obj *Tps) BeforeCreate(tx *gorm.DB) (err error) {
